--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 </head>
 
 <body>
-  <div></div>
+  <div id="dunker"></div>
   <form action="/action_page.php">
-  Add famous NBA dunker:<br>
-  <input type="text" name="posterize" value="">
+  Add a famous NBA dunker:<br>
+  <input id="userinput" type="text" name="posterize" value="">
   <br>
   <br><br>
   <input id="button" type="submit" value="Submit">
 </form> 
-  <div id="images">
+  <div id="gifs-please">
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="assets/javascript/gif.js"></script>
