--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <br><br>
   <input id="button" type="submit" value="Submit">
 </form> 
-  <div id="gifs-please">
+  <div id="gifs">
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="assets/javascript/gif.js"></script>
