--- a/index.html
+++ b/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en us">
 
-<head>
-  <meta charset="utf-8">
-  <title>GifTastic</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>GifTastic</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  </head>
 
-<body>
-  <div id="dunker"></div>
-  <form action="/action_page.php">
-  Add a famous NBA dunker:<br>
-  <input id="userinput" type="text" name="posterize" value="">
-  <br>
-  <br><br>
-  <input id="button" type="submit" value="Submit">
-</form> 
-  <div id="gifs-please">
-  </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="assets/javascript/gif.js"></script>
-</body>
+  <body>
+    <!-- Div where our buttons will live -->
+    <div id="dunker"></div>
+
+    <!-- Form where users will input player names -->
+    <form action="/action_page.php">
+    Add a famous NBA dunker:<br>
+      <input id="userinput" type="text" name="posterize" value="">
+      <br>
+      <br><br>
+      <input id="button" type="submit" value="Submit">
+  </form> 
+
+  <!-- Div where our gifs will live -->
+    <div id="gifs-please">
+    </div>
+
+    <!-- JQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <!-- JavaScript -->
+    <script type="text/javascript" src="assets/javascript/gif.js"></script>
+  </body>
 
 </html>
